# gondola

./: .buildinfo  .gitignore  Getting-started.html  README.md  __init__.py  docs.md  gendoc.py  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  test.py  todos.html
.doctrees/: Getting-started.doctree  environment.pickle  index.doctree  todos.doctree
.doctrees/autoapi/: index.doctree
.github/workflows/: documentation.yaml  run_test.yaml
_modules/: gondola.html  index.html
_modules/basics/: items.html  lists.html  objects.html  shell.html  time.html
_modules/formats/: javascript.html  json.html  yaml.html
_modules/loggers/: funcs.html
_sources/: Getting-started.md.txt  todos.rst.txt
_sources/autoapi/: index.rst.txt
autoapi/: index.html
autoapi/basics/: index.html
autoapi/formats/: index.html
autoapi/gondola/: index.html
autoapi/loggers/: index.html
basic/: lists.py  logging.py  objects.py
doc/: Getting-started.md  Makefile  conf.py  index.rst  todos.md  todos.rst
doc/_templates/: index.rst
files/: json.py
gondola/: __init__.py  docs.md  gondola.py  xyz.py
gondola/basic/: __init__.py  basic.py  logging.py
gondola/basics/: __init__.py  items.py  lists.py  loggers.py  objects.py  shell.py
gondola/formats/: __init__.py  json.py  yaml.py
gondola/loggers/: funcs.py
gondola/xmlang/: __init__.py
src/: gondola.py
src/basics/: requests.py  time.py
src/formats/: __init__.py  javascript.py
tests/: test_area.py  test_logger.py
text/: __init__.py
(+40 files in other folders)
